--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,12 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Ionic Blank
+      Google Map
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
-  </div>
+  <!--create a element for map. #Map - identifier -->
+  <div #Map class="map"></div>
 </ion-content>
