added a comment to the style part

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -29,7 +29,7 @@
       transform: translate(-50%, -50%);
     }
   
-    end of the style 
+    /*end of the style */
   </style>
   <ion-header><!-- sets the header for the page with -->
     
