--- a/src/components/components-timer/components-timer.html
+++ b/src/components/components-timer/components-timer.html
@@ -1,4 +1,8 @@
 <!-- Generated template for the ComponentsTimerComponent component -->
 <div>
   {{time}}
+  <br>
+  <p id="timer">Current Time: </p>
+  <br> 
+  {{this.Data.CurrentTime}}
 </div>
