Timer can be called and if a new time is provided it will start over again wihtout having two counters going

--- a/src/components/components-timer/components-timer.html
+++ b/src/components/components-timer/components-timer.html
@@ -1,8 +1,4 @@
 <!-- Generated template for the ComponentsTimerComponent component -->
 <div>
-  {{time}}
-  <br>
-  <p id="timer">Current Time: </p>
-  <br> 
-  {{this.Data.CurrentTime}}
+  {{Data.CurrentTime}}
 </div>
