--- a/src/components/components-timer/components-timer.html
+++ b/src/components/components-timer/components-timer.html
@@ -1,4 +1,4 @@
 <!-- Generated template for the ComponentsTimerComponent component -->
 <div>
-  {{Data.CurrentTime}}
+  Time passed: {{Data.HoursSince |number:'2.0'}}:{{Data.MinutesSince |number:'2.0'}}:{{Data.SecondsSince |number:'2.0'}}
 </div>
