--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -38,7 +38,11 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  blue:       #0000ff,
+  steelblue2: #1d44b8,
+  steelblue1: #214cce
+
 );
 
 
