Messed with colours need to fix time math

--- a/src/components/components-timer/components-timer.html
+++ b/src/components/components-timer/components-timer.html
@@ -1,4 +1,4 @@
 <!-- Generated template for the ComponentsTimerComponent component -->
-<div>
+<div id="Timer" [style.background-color]="Data.colour">
   Time passed: {{Data.HoursSince |number:'2.0'}}:{{Data.MinutesSince |number:'2.0'}}:{{Data.SecondsSince |number:'2.0'}}
 </div>
