Made changes to the looks and have it showing time remaining need to look at times and spelling

--- a/src/components/components-timer/components-timer.scss
+++ b/src/components/components-timer/components-timer.scss
@@ -4,6 +4,8 @@ div{
     height: 10%;
     background-color:"Data.colour";
     border: solid black 1px;
+    vertical-align: middle;
+    font-size: large;
 }
 
 }
