--- a/src/components/components-timer/components-timer.html
+++ b/src/components/components-timer/components-timer.html
@@ -1,4 +1,13 @@
 <!-- Generated template for the ComponentsTimerComponent component -->
-<div id="Timer" [style.background-color]="Data.colour">
-  Time passed: {{Data.HoursSince |number:'2.0'}}:{{Data.MinutesSince |number:'2.0'}}:{{Data.SecondsSince |number:'2.0'}}
+<div id="Timer" [style.background-color]="Data.colour" style="vertical-align: middle;">
+  <ion-grid style="vertical-align: middle;">
+    <ion-row>
+    <ion-col >
+     <p >Time passed:<b> {{Data.HoursSince |number:'2.0'}}:{{Data.MinutesSince |number:'2.0'}}:{{Data.SecondsSince |number:'2.0'}}</b></p>
+  </ion-col>
+    <ion-col>
+      <span style="vertical-align: middle;" [innerHTML]="Data.TreatmentInfo"></span>
+    </ion-col>
+  </ion-row>
+  </ion-grid>
 </div>
