Changing the outline to a different math way for simplicity

--- a/src/components/components-timer/components-timer.scss
+++ b/src/components/components-timer/components-timer.scss
@@ -1,11 +1,12 @@
 components-timer {
     
 div{
-    height: 10%;
+    height: auto;
     background-color:"Data.colour";
     border: solid black 1px;
     vertical-align: middle;
     font-size: large;
+    word-break: break-word;
 }
 
 }
