--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,5 @@
 
-  <div id="custom-overlay" [style.display]="splash ? 'flex': 'none'">
+  <<div id="custom-overlay" [style.display]="splash ? 'flex': 'none'">
     <div class="flb">
       <div class="Aligner-item Aligner-item--top"></div>
       <img src="assets/icon/SVG_Logo.svg.png">
