fade in on logo works

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,5 @@
 
-  <<div id="custom-overlay" [style.display]="splash ? 'flex': 'none'">
+<div id="custom-overlay" [style.display]="splash ? 'flex': 'none'">
     <div class="flb">
       <div class="Aligner-item Aligner-item--top"></div>
       <img src="assets/icon/SVG_Logo.svg.png">
@@ -7,7 +7,7 @@
     </div>
   </div>
 
-<ion-menu [content]="mainContent">
+  <ion-menu [content]="mainContent">
 
   <ion-header>
     <ion-toolbar>
@@ -29,5 +29,4 @@
     </ion-list>
   </ion-content>
 </ion-menu>
-
 <ion-nav #mainContent [root]="rootPage"></ion-nav>
