--- a/src/components/components-timer/components-timer.html
+++ b/src/components/components-timer/components-timer.html
@@ -2,10 +2,10 @@
 <div id="Timer" [style.background-color]="Data.colour" no-padding style="vertical-align: middle;">
   <ion-grid style="vertical-align: middle;">
     <ion-row>
-    <ion-col >
+    <ion-col col2 >
      <p style="font-size: large;">Time passed:<b> {{Data.HoursSince |number:'2.0'}}:{{Data.MinutesSince |number:'2.0'}}:{{Data.SecondsSince |number:'2.0'}}</b></p>
   </ion-col>
-    <ion-col align-self-center>
+    <ion-col col2 align-self-center align-self-stretch>
       <span style="vertical-align: middle;" [innerHTML]="Data.TreatmentInfo"></span>
     </ion-col>
   </ion-row>
