Made changes to pages need to adjust the height for the actual divs to size it out with no overlap and scroll

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -24,6 +24,12 @@
     width:100%;
     background-color: "steelblue2";
   }
+  .button{
+    font-size: large;
+  }
+  .ion-content{
+    height:100vh;
+  }
   
   .flb {
     background-color: #3ebffb;
