--- a/src/pages/patient-location/patient-location.scss
+++ b/src/pages/patient-location/patient-location.scss
@@ -1,5 +1,10 @@
 page-patient-location {
-
+.button{
+  font-size: large;
+}
+.ion-title{
+  font-size: x-large;
+}
   .button-native[disabled] {
     cursor: default;
     opacity: .5;
