Added cards to the functionality part

--- a/src/components/components-timer/components-timer.html
+++ b/src/components/components-timer/components-timer.html
@@ -1,5 +1,5 @@
 <!-- Generated template for the ComponentsTimerComponent component -->
-<div id="Timer" [style.background-color]="Data.colour" no-padding style="vertical-align: middle;">
+<div id="Timer" [style.background-color]="Data.colour" no-padding style="vertical-align: middle;height: auto;">
   <ion-grid style="vertical-align: middle;">
     <ion-row>
     <ion-col col2 >
