--- a/src/pages/imaging/imaging.scss
+++ b/src/pages/imaging/imaging.scss
@@ -1,5 +1,22 @@
 page-imaging {
-    .no-scroll .scroll-content{
-        overflow: hidden;
-   }
+   ion-content ion-card{
+    background: lightblue!important;
+    width: 100%;
+  }
+  .fixed[scrollx=true], div[scrolly=true] {
+    position: relative;
+    overflow: hidden;
+  
+    ::-webkit-scrollbar {
+      display: none;
+    }
+  }
+  
+  .fixed[scrollx=true] {
+    overflow-x: auto;
+  }
+  
+  .fixed[scrolly=true] {
+    overflow-y: auto;
+  }
 }
