--- a/src/pages/imaging/imaging.scss
+++ b/src/pages/imaging/imaging.scss
@@ -19,4 +19,28 @@ page-imaging {
   .fixed[scrolly=true] {
     overflow-y: auto;
   }
+
+  div.page {
+    height: calc(100vh - 202px);
+ }
+
+ * {
+  margin: 0 ;
+  padding:0;
+}
+
+body {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.box{
+  width: 100px;
+  height:100px;
+  background-color: #ccc;
+}
+
 }
