origin multiplier update and added ambulance picture to route cards

--- a/src/pages/map/map.scss
+++ b/src/pages/map/map.scss
@@ -3,3 +3,15 @@ page-map{
       height: 500px;
     }
   }
+
+  .map {
+    position: absolute;
+    bottom: 0;
+  }
+
+  .contact {
+    position: absolute;
+    bottom:   0;
+    width: 100%;
+  }
+  
