--- a/src/pages/imaging/imaging.scss
+++ b/src/pages/imaging/imaging.scss
@@ -25,8 +25,8 @@ page-imaging {
  }
 
  * {
-  margin: 0 ;
-  padding:0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -49,5 +49,14 @@ body {
   width: 100%;
 }
 
+div.card-scroll {
+  position: relative;
+  bottom: 0;
+}
+
+h1 {
+  width: 10%;
+  float: right;
+}
 
 }
