--- a/src/pages/imaging/imaging.scss
+++ b/src/pages/imaging/imaging.scss
@@ -25,8 +25,8 @@ page-imaging {
  }
 
  * {
-  margin: 0 ;
-  padding:0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -47,6 +47,16 @@ body {
   position: absolute;
   bottom:   0;
   width: 100%;
+}
+
+div.card-scroll {
+  position: relative;
+  bottom: 0;
+}
+
+h1 {
+  width: 10%;
+  float: right;
 }
 
 
