Added some changes in colour need to fix async with getImaging

--- a/src/pages/imaging/imaging.scss
+++ b/src/pages/imaging/imaging.scss
@@ -1,6 +1,6 @@
 page-imaging {
    ion-content ion-card{
-    background: lightblue!important;
+    background: lightblue;
     width: 100%;
   }
   .fixed[scrollx=true], div[scrolly=true] {
