messing around with logo ideas

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,7 +2,7 @@
 <div id="custom-overlay" [style.display]="splash ? 'flex': 'none'">
     <div class="flb">
       <div class="Aligner-item Aligner-item--top"></div>
-      <img src="assets/icon/SVG_Logo.svg.png">
+      <img src="assets/icon/logov1.png">
       <div class="Aligner-item Aligner-item--bottom"></div>
     </div>
   </div>
