added the right compare time

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -7,7 +7,7 @@
     </div>
   </div>
 
-  <ion-menu [content]="mainContent">
+  <!--<ion-menu [content]="mainContent">
 
   <ion-header>
     <ion-toolbar>
@@ -28,5 +28,5 @@
       </ion-item>
     </ion-list>
   </ion-content>
-</ion-menu>
+</ion-menu>-->
 <ion-nav #mainContent [root]="rootPage"></ion-nav>
