Cleaned and commented the spinner component

--- a/src/components/spinner/spinner.scss
+++ b/src/components/spinner/spinner.scss
@@ -1,5 +1,5 @@
 spinner {
-    .spinner {
+    .spinner {//This is the major bulk of the code and was copied from an online tutorial and sligtly modified for our use 
         margin: 100px auto;
         width: 40px;
         height: 40px;
