- Removed parts from evt options I had forgot about - cleaned and commented the imaging page - removed some unused parts of code hopefully not needed

--- a/src/pages/imaging/imaging.scss
+++ b/src/pages/imaging/imaging.scss
@@ -1,5 +1,5 @@
 page-imaging {
-   ion-content ion-card{
+   ion-content ion-card{//this is the style for the cards that are displayed 
     background: lightblue;
     width: 100%;
   }
