--- a/src/app/app.html
+++ b/src/app/app.html
@@ -7,6 +7,8 @@
     </div>
   </div>
 
+
+  <!--This was a side menu we deicded was too confusing it could be accessed on all screens and it is good to keep if we need to look at it for reference-->
   <!--<ion-menu [content]="mainContent">
 
   <ion-header>
@@ -29,4 +31,4 @@
     </ion-list>
   </ion-content>
 </ion-menu>-->
-<ion-nav #mainContent [root]="rootPage"></ion-nav>
+<ion-nav #mainContent [root]="rootPage"></ion-nav><!--This is where to start the information-->
