--- a/src/components/components-timer/components-timer.scss
+++ b/src/components/components-timer/components-timer.scss
@@ -7,7 +7,7 @@ div{//Sets the basic style for the div
     word-break: break-word;
 }
 ion-col{//sets the colour of the lines between the two columns may need changing if it is not visible enough
-    border: solid white 1px;
+    border-right: solid white 1px;
 }
 
 }
