--- a/src/components/spinner/spinner.scss
+++ b/src/components/spinner/spinner.scss
@@ -2,7 +2,7 @@ spinner {
     .spinner {//This is the major bulk of the code and was copied from an online tutorial and sligtly modified for our use 
         margin: 100px auto;
         width: 40px;
-        height: 40px;
+        height: 15vh;
         position: relative;
       }
       
