--- a/src/pages/next-steps/next-steps.scss
+++ b/src/pages/next-steps/next-steps.scss
@@ -1,3 +1,9 @@
 page-next-steps {
 
+
+    .Call{
+        color: blue($color: #0000EE);
+        font-weight: bolder;
+        text-decoration: underline;
+    }
 }
