- changed some pictures and tried modiying the html to get it to work

--- a/src/pages/treatment/treatment.scss
+++ b/src/pages/treatment/treatment.scss
@@ -61,7 +61,9 @@ page-treatment {
     
     h1 {
       width: 10%;
+      height: auto;
       float: right;
+      text-align: center;
     }
     
     h2 {
