--- a/src/pages/evt-options/evt-options.scss
+++ b/src/pages/evt-options/evt-options.scss
@@ -61,7 +61,9 @@ page-evt-options {
     
     h1 {
       width: 10%;
+      height: auto;
       float: right;
+      text-align: center;
     }
     
     h2 {
