--- a/src/pages/next-steps/next-steps.scss
+++ b/src/pages/next-steps/next-steps.scss
@@ -6,4 +6,28 @@ page-next-steps {
         font-weight: bolder;
         text-decoration: underline;
     }
+
+
+    ol {
+        margin: 0 0 1.5em;
+        padding: 1;
+        counter-reset: item;
+      }
+      
+      ol > li {
+        margin: 0;
+        padding: 0 0 0 2em;
+        text-indent: -2em;
+        list-style-type: none;
+        counter-increment: item;
+      }
+      
+      ol > li:before {
+        display: inline-block;
+        width: 1em;
+        padding-right: 0.5em;
+        font-weight: bold;
+        text-align: right;
+        content: counter(item) ".";
+      }
 }
