- finished up the first few pages - added a universal rounded class to the app.scss

--- a/src/pages/last-known-well/last-known-well.scss
+++ b/src/pages/last-known-well/last-known-well.scss
@@ -1,5 +1,14 @@
 page-last-known-well {
 
+   /* .roundedEntry{
+        border-radius: 20px !important;
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-bottom: 5px;
+        padding-top: 5px;
+        }*/
+    
+
     .div-center > *{
         height:100%;
         display: block;
