--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -37,6 +37,7 @@ body{
 }
 button{
   color: white;
+  
 }
 p{
   color: #006BB6;
@@ -68,6 +69,15 @@ h3{
   .ion-content{
     height:100vh;
   }
+
+  .roundedEntry{
+      border-radius: 20px !important;
+      padding-left: 10px;
+      padding-right: 10px;
+      padding-bottom: 5px;
+      padding-top: 5px;
+      }
+  
   
   .flb {
     background-color: #3ebffb;
