--- a/src/components/components-timer/components-timer.html
+++ b/src/components/components-timer/components-timer.html
@@ -3,7 +3,7 @@
   <ion-grid style="vertical-align: middle;"><!--Put into a grid at Keli's request to show seperation between parts-->
     <ion-row>
     <ion-col col2 ><!--Put it all into one row the first column shows the time that has passed  -->
-     <p style="font-size: large;">Time Since LKW:<br><b><span style="font-size: x-large"> {{Data.HoursSince |number:'2.0'}}:{{Data.MinutesSince |number:'2.0'}}:{{Data.SecondsSince |number:'2.0'}}</span></b></p>
+     <p style="font-size: large;color:white;">Time Since LKW:<br><b><span style="font-size: x-large"> {{Data.HoursSince |number:'2.0'}}:{{Data.MinutesSince |number:'2.0'}}:{{Data.SecondsSince |number:'2.0'}}</span></b></p>
      <!--The |number:2.0 is a data pipeline which means that there must be 2 digits before the decimal and any amount after so instead of 1h passing it would be 01h there is not currently a decimal for any though -->
   </ion-col>
     <ion-col style="border-right: 0 !important;" col2  align-self-stretch><!--The second column shows the imformation of how much time is left for each treatment-->
