- third page is working and the size of the timer has been modified - changed the timer to fit what was specified

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -65,6 +65,7 @@ h3{
   }
   .button{// we set the button style for the whole app here 
     font-size: large;
+    color: white;
   }
   .ion-content{
     height:100vh;
