--- a/src/app/app.html
+++ b/src/app/app.html
@@ -12,15 +12,15 @@
   <ion-menu [content]="mainContent" side="right" persistent="true">
 
   <ion-header>
-    <ion-toolbar color="steelblue2">
+    <ion-toolbar >
       <ion-title>
         Menu
       </ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-content id="side-menu21">
+  <ion-content id="side-menu21" style="color: #006bb6;">
     <ion-list id="menu-list1">
-    <ion-item color="none" menuClose on-click="goToMap()" id="menu-list-item1">
+    <ion-item color="#006bb6" menuClose on-click="goToMap()" id="menu-list-item1">
         Map
         <ion-icon name="map" item-right></ion-icon>
       </ion-item>
