--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -53,6 +53,9 @@ h3{
   font-weight:400;
   font-size: xx-large;
 }
+.h1{
+  color: #006bb6;
+}
 #custom-overlay {
     position: fixed;
     top: 0;
