--- a/src/components/components-timer/components-timer.scss
+++ b/src/components/components-timer/components-timer.scss
@@ -6,8 +6,8 @@ div{//Sets the basic style for the div
     vertical-align: middle;
     word-break: break-word;
 }
-ion-col{//sets the colour of the lines between the two columns may need changing if it is not visible enough
+/*ion-col{//sets the colour of the lines between the two columns may need changing if it is not visible enough
     border-right: solid white 1px;
-}
+}*/
 
 }
