- changed the colour of the buttons to be correct

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -69,6 +69,7 @@ h3{
   .button{// we set the button style for the whole app here 
     font-size: large;
     color: white;
+    background-color: #006bb6;
   }
   .ion-content{
     height:100vh;
