- changed the look of all of the routing pages

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -48,6 +48,9 @@ ion-button {
 ion-header{
  color: #006bb6;
 }
+ion-card{
+  border-radius: 15px !important;
+}
 h3{
   color:#006bb6;
   font-weight:400;
