--- a/src/app/app.html
+++ b/src/app/app.html
@@ -20,19 +20,19 @@
   </ion-header>
   <ion-content id="side-menu21" style="color: #006bb6;">
     <ion-list id="menu-list1">
-    <ion-item color="#006bb6" menuClose on-click="goToMap()" id="menu-list-item1">
-        Map
+    <ion-item style="color: #006bb6;" menuClose on-click="goToMap()" id="menu-list-item1">
+        NWO Services Map
         <ion-icon name="map" item-right></ion-icon>
       </ion-item>
-      <ion-item color="none" menuClose on-click="goToContact()" id="menu-list-item2">
+      <ion-item color="#006bb6" style="color: #006bb6;" menuClose on-click="goToContact()" id="menu-list-item2">
         Contact Us
         <ion-icon name="mail" item-right></ion-icon>
       </ion-item>
-      <ion-item color="none" menuClose on-click="goToBestPractice()" id="menu-list-item3">
-        Best Practice
+      <ion-item style="color: #006bb6;" menuClose on-click="goToBestPractice()" id="menu-list-item3">
+        Canadian Stroke Best Practices
         <ion-icon name="medkit" item-right></ion-icon>
       </ion-item>
-      <ion-item color="none" menuClose on-click="StartOver()" id="menu-list-item4">
+      <ion-item style="color: #006bb6;" menuClose on-click="StartOver()" id="menu-list-item4">
         Start Over
         <ion-icon name="home" item-right></ion-icon>
       </ion-item>
