- made some more changes to the map options - added the contact page and made it work

--- a/src/pages/map-explore/map-explore.scss
+++ b/src/pages/map-explore/map-explore.scss
@@ -8,6 +8,10 @@ page-map-explore {
     position: relative;
   }
 
+  ion-option{
+    color: #006bb6;
+  }
+
   .contact {
     position: absolute;
     bottom:   0;
