--- a/src/components/spinner/spinner.scss
+++ b/src/components/spinner/spinner.scss
@@ -1,15 +1,17 @@
 spinner {
     .spinner {//This is the major bulk of the code and was copied from an online tutorial and sligtly modified for our use 
-        margin: 100px auto;
-        width: 40px;
+        margin-left: 40vw;
+        margin-top: 100px ;
+        margin-bottom: 100px ;
+        width: 45px;
         height: 15vh;
         position: relative;
       }
       
       .cube1, .cube2 {
-        background-color: #333;
-        width: 15px;
-        height: 15px;
+        //background-color: #333;
+        width: 50px;
+        height: 50px;
         position: absolute;
         top: 0;
         left: 0;
