- Changed the help to a button - added a pipe for html - attempted to put the calls in a button

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -113,6 +113,11 @@ h3{
     animation: animation 3100ms linear infinite both;
   
   }
+
+  .popup{
+    
+    height: 155vh;
+}
   
   @keyframes pulse {// this is the animation used on the time is brain icon 
     0% {
