--- a/src/pages/next-steps/next-steps.scss
+++ b/src/pages/next-steps/next-steps.scss
@@ -7,6 +7,15 @@ page-next-steps {
         text-decoration: underline;
     }
 
+    .callButton{
+      text-align: center;
+      font-size: large; 
+      vertical-align: middle;
+      padding-left: 0.2vw;
+      padding-right: 0.2vw;
+      margin-left: -3vw;
+  }
+
 
     ol {
         margin: 0 0 1.5em;
