Installed the paid service and messed around with the html of path 1 in the next steps

--- a/src/pages/next-steps/next-steps.scss
+++ b/src/pages/next-steps/next-steps.scss
@@ -4,7 +4,7 @@ page-next-steps {
     .Call{
         color: blue($color: #0000EE);
         font-weight: bolder;
-        text-decoration: underline;
+        //text-decoration: underline;
     }
 
     .callButton{
@@ -13,7 +13,7 @@ page-next-steps {
       vertical-align: middle;
       padding-left: 0.2vw;
       padding-right: 0.2vw;
-      margin-left: -3vw;
+     // margin-left: -3vw;
   }
 
 
