--- a/src/components/expand/expand.html
+++ b/src/components/expand/expand.html
@@ -1,4 +1,4 @@
 <!-- Generated template for the ExpandComponent component -->
-<div #expandWrapper class="expand-wrapper" [class.collapsed="!expanded"]>
+<div #expandWrapper class="expand-wrapper" [class.collapsed]="!expanded">
   <ng-content></ng-content>
 </div>
