--- a/src/pages/imaging/imaging.scss
+++ b/src/pages/imaging/imaging.scss
@@ -49,6 +49,13 @@ body {
   width: 100%;
 }
 
+.callButton{
+  font-size: small; 
+  padding-left: 0.2vw;
+  padding-right: 0.2vw;
+ // margin-left: -3vw;
+}
+
 .p{
   color: white;
 }
