- Fixed the spelling and such on all of the pages I could think of

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,7 +8,7 @@
   </div>
 
 
-  <!--This was a side menu we deicded was too confusing it could be accessed on all screens and it is good to keep if we need to look at it for reference-->
+  <!--This was a side menu we decided was too confusing it could be accessed on all screens and it is good to keep if we need to look at it for reference-->
   <ion-menu [content]="mainContent" side="right" persistent="true">
 
   <ion-header>
