--- a/src/components/spinner/spinner.scss
+++ b/src/components/spinner/spinner.scss
@@ -1,5 +1,5 @@
 spinner {
-    .spinner {//This is the major bulk of the code and was copied from an online tutorial and sligtly modified for our use 
+    .spinner {//This is the major bulk of the code and was copied from an online tutorial and slightly modified for our use 
         margin-left: 40vw;
         margin-top: 100px ;
         margin-bottom: 100px ;
