-added images to the expanded view and fixed some issues with the routing function that creates the objects

--- a/src/pages/imaging/imaging.scss
+++ b/src/pages/imaging/imaging.scss
@@ -29,6 +29,13 @@ page-imaging {
   padding: 0;
 }
 
+.image{
+  padding-left: 0vw;
+  padding-right: 0vw;
+  padding-top: 0vh;
+  padding-bottom: 0vh;
+}
+
 body {
   width: 100vw;
   height: 100vh;
