- added the helicopter image -made the images bigger -made the text in the center of the image

--- a/src/pages/imaging/imaging.scss
+++ b/src/pages/imaging/imaging.scss
@@ -34,6 +34,14 @@ page-imaging {
   padding-right: 0vw;
   padding-top: 0vh;
   padding-bottom: 0vh;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.imageText{
+  display: inline-block;
+  vertical-align: middle;
+  color: white;
 }
 
 body {
