- made a new provider for the searches - added new functions to hide and show the map when there is text or not

--- a/src/pages/map-explore/map-explore.scss
+++ b/src/pages/map-explore/map-explore.scss
@@ -5,7 +5,8 @@ page-map-explore {
   }
 
   .map {
-    position: relative;
+    //position: absolute;
+   // z-index: 1;
   }
 
   ion-option{
@@ -17,7 +18,11 @@ page-map-explore {
     bottom:   0;
     width: 100%;
   }
-  
+  .scroller{
+    position: relative;
+    //z-index: 2;
+    //background-color: transparent;
+  }
 #searchBar{
   display: block;
   z-index: 999;
