--- a/src/pages/last-known-well/last-known-well.scss
+++ b/src/pages/last-known-well/last-known-well.scss
@@ -17,6 +17,16 @@ page-last-known-well {
     }
     .vertical-align-content > *
 {
+
+    .image{
+        padding-left: 0vw;
+        padding-right: 0vw;
+        padding-top: 0vh;
+        padding-bottom: 0vh;
+        display: block;
+        margin-right: auto;
+        margin-left: auto;
+      }
     
     height: 100%;
     width: 100%;
