--- a/src/app/app.html
+++ b/src/app/app.html
@@ -32,7 +32,11 @@
         Canadian Stroke Best Practices
         <ion-icon name="medkit" item-right></ion-icon>
       </ion-item>
-      <ion-item style="color: #006bb6;" menuClose on-click="StartOver()" id="menu-list-item4">
+      <ion-item style="color: #006bb6;" menuClose on-click="goToTutorial()" id="menu-list-item4">
+        Tutorial
+        <ion-icon name="easel" item-right></ion-icon>
+      </ion-item>
+      <ion-item style="color: #006bb6;" menuClose on-click="StartOver()" id="menu-list-item5">
         Start Over
         <ion-icon name="home" item-right></ion-icon>
       </ion-item>
