--- a/src/app/app.html
+++ b/src/app/app.html
@@ -20,26 +20,37 @@
   </ion-header>
   <ion-content id="side-menu21" style="color: #006bb6;">
     <ion-list id="menu-list1">
-    <ion-item style="color: #006bb6;" menuClose on-click="goToMap()" id="menu-list-item1">
-        NWO Services Map
-        <ion-icon name="map" item-right></ion-icon>
-      </ion-item>
-      <ion-item color="#006bb6" style="color: #006bb6;" menuClose on-click="goToContact()" id="menu-list-item2">
-        Contact Us
-        <ion-icon name="mail" item-right></ion-icon>
-      </ion-item>
-      <ion-item style="color: #006bb6;" menuClose on-click="goToBestPractice()" id="menu-list-item3">
-        Canadian Stroke Best Practices
-        <ion-icon name="medkit" item-right></ion-icon>
-      </ion-item>
-      <ion-item style="color: #006bb6;" menuClose on-click="goToTutorial()" id="menu-list-item4">
-        Tutorial
-        <ion-icon name="easel" item-right></ion-icon>
-      </ion-item>
-      <ion-item style="color: #006bb6;" menuClose on-click="StartOver()" id="menu-list-item5">
+      <ion-item style="color: #006bb6;" menuClose on-click="StartOver()" id="menu-list-item1">
         Start Over
         <ion-icon name="home" item-right></ion-icon>
       </ion-item>
+    <ion-item style="color: #006bb6;" menuClose on-click="goToMap()" id="menu-list-item2">
+        <!--NWO Services Map-->Map of NWO Stroke Services
+        <ion-icon name="map" item-right></ion-icon>
+      </ion-item>
+      <ion-item style="color: #006bb6;" menuClose on-click="ExploreIcons()" id="menu-list-item3">
+        Explore NWO Stroke Icons
+        <ion-icon name="compass" item-right></ion-icon><!--!ADD A NEW IMAGE FOR THIS ONE --> 
+      </ion-item>
+      <ion-item style="color: #006bb6;" menuClose on-click="goToBestPractice()" id="menu-list-item4">
+        Canadian Stroke Best Practices
+        <ion-icon name="medkit" item-right></ion-icon>
+      </ion-item>
+      <ion-item style="color: #006bb6;" menuClose on-click="goToTutorial()" id="menu-list-item5">
+        Tutorial
+        <ion-icon name="easel" item-right></ion-icon>
+      </ion-item>
+      <ion-item style="color: #006bb6;" menuClose on-click="WaysToUse()" id="menu-list-item6">
+        Ways to use NWO Navigate
+        <ion-icon name="bulb" item-right></ion-icon>
+      </ion-item>
+      <ion-item color="#006bb6" style="color: #006bb6;" menuClose on-click="goToContact()" id="menu-list-item7">
+        Contact Us
+        <ion-icon name="mail" item-right></ion-icon>
+      </ion-item>
+      
+      
+     
     </ion-list>
   </ion-content>
 </ion-menu>
