-added a section in the location screen where the size of phones can be found -modified the welcome page to fit to most screen sizes - started experimenting with the Last Known well page to see how to work it

--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -5,4 +5,11 @@ page-welcome {
         height: 50vh;
     }
     
+.Vertical-center{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
 }
