--- a/src/pages/last-known-well/last-known-well.scss
+++ b/src/pages/last-known-well/last-known-well.scss
@@ -27,12 +27,17 @@ page-last-known-well {
         margin-right: auto;
         margin-left: auto;
       }
-    
-    height: 100%;
+      .vertical-center{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+    }
+    /*height: 100%;
     width: 100%;
     display: block;
     align-items: center;
-    text-align: center;
+    text-align: center;*/
   
 } 
 }
