--- a/src/pages/last-known-well/last-known-well.scss
+++ b/src/pages/last-known-well/last-known-well.scss
@@ -7,7 +7,10 @@ page-last-known-well {
         padding-bottom: 5px;
         padding-top: 5px;
         }*/
-    
+        .row{
+            //border: solid black 1px;
+            height: 28vh !important;
+        }
 
     .div-center > *{
         height:100%;
@@ -17,6 +20,9 @@ page-last-known-well {
     }
     .vertical-align-content > *
 {
+    
+
+
 
     .image{
         padding-left: 0vw;
