- Deleted the help page as it was not being used -created a new FAQ Page acting as a modal - Added the FAQ option to the menu

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -44,6 +44,10 @@
         Ways to use NWO Navigate
         <ion-icon name="bulb" item-right></ion-icon>
       </ion-item>
+      <ion-item style="color: #006bb6;" menuClose on-click="FAQ()" id="menu-list-item6">
+        FAQ
+        <ion-icon name="help-circle" item-right></ion-icon>
+      </ion-item>
       <ion-item color="#006bb6" style="color: #006bb6;" menuClose on-click="goToContact()" id="menu-list-item7">
         Contact Us
         <ion-icon name="mail" item-right></ion-icon>
