-updated the map pages with the general function which is kept in the data service provider - Started messing with the contact page in order to get it to fit better

--- a/src/pages/menu/contact/contact.scss
+++ b/src/pages/menu/contact/contact.scss
@@ -7,16 +7,15 @@ page-contact {
     .imgbox {
         height: 80vh;
         width: auto;
-        //border: 2px solid black;
         text-align: center;
-        //object-fit: scale-down !important;
+        //bject-fit: scale-down !important;
     }
     .center-fit {
       //  max-width: 100%;
-        max-height: calc(80vh/4) !important;
+        max-height: calc(85vh/4) !important;
        // margin: auto;
        // object-fit: contain !important;
-       height: calc(80vh/5.25);
+       height: calc(85vh/5.25);
        width: auto;
       
 
