--- a/src/pages/last-known-well/last-known-well.scss
+++ b/src/pages/last-known-well/last-known-well.scss
@@ -37,7 +37,7 @@ page-last-known-well {
         display: flex;
         align-items: center;
         justify-content: center;
-        height: 100%;
+        //height: 100%;
     }
     /*height: 100%;
     width: 100%;
