--- a/src/pages/last-known-well/last-known-well.scss
+++ b/src/pages/last-known-well/last-known-well.scss
@@ -8,8 +8,8 @@ page-last-known-well {
         padding-top: 5px;
         }*/
         .row{
-            //border: solid black 1px;
-            height: 28vh !important;
+           // border: solid black 1px;
+            //height: 30% !important;
         }
 
     .div-center > *{
